# libcrippy

./: .autotools  .cproject  .project  Makefile.am  configure.ac  libcrippy-1.0.pc.in
include/: Makefile.am
include/libcrippy-1.0/: architecture.h  boolean.h  debug.h  directory.h  endianness.h  file.h  fuzz.h  libcrippy.h
src/: Makefile.am  architecture.c  directory.c  file.c  fuzz.c  libcrippy.c
